fix(server): add missing coloring add tag btn

--- a/src/styles/server/channel/forum.scss
+++ b/src/styles/server/channel/forum.scss
@@ -17,3 +17,10 @@
 .countText__5808f /** Dropdown menu */ {
   color: var(--black-500);
 }
+
+/*
+ * > Channel settings
+ */
+.addTags__3f6df path[fill='var(--white)'] {
+  fill: var(--black-500);
+}
